fix floating point error
