# swagger_server/models/student.py
@@ -15,7 +15,7 @@ class Student(Model):
 
     Do not edit the class manually.
     """
-    def __init__(self, student_id: int=None, first_name: str=None, last_name: str=None, grade_record: List[GradeRecords]=None):  # noqa: E501
+    def __init__(self, student_id: int=None, first_name: str=None, last_name: str=None, grade_records: List[GradeRecords]=None):  # noqa: E501
         """Student - a model defined in Swagger
 
         :param student_id: The student_id of this Student.  # noqa: E501
@@ -24,26 +24,26 @@ class Student(Model):
         :type first_name: str
         :param last_name: The last_name of this Student.  # noqa: E501
         :type last_name: str
-        :param grade_record: The grade_record of this Student.  # noqa: E501
-        :type grade_record: List[GradeRecords]
+        :param grade_records: The grade_records of this Student.  # noqa: E501
+        :type grade_records: List[GradeRecords]
         """
         self.swagger_types = {
             'student_id': int,
             'first_name': str,
             'last_name': str,
-            'grade_record': List[GradeRecords]
+            'grade_records': List[GradeRecords]
         }
 
         self.attribute_map = {
             'student_id': 'student_id',
             'first_name': 'first_name',
             'last_name': 'last_name',
-            'grade_record': 'grade_record'
+            'grade_records': 'gradeRecords'
         }
         self._student_id = student_id
         self._first_name = first_name
         self._last_name = last_name
-        self._grade_record = grade_record
+        self._grade_records = grade_records
 
     @classmethod
     def from_dict(cls, dikt) -> 'Student':
@@ -74,7 +74,6 @@ class Student(Model):
         :param student_id: The student_id of this Student.
         :type student_id: int
         """
-        #raise ValueError("Invalid value for `student_id`, must not be `None`")  # noqa: E501
 
         self._student_id = student_id
 
@@ -125,22 +124,22 @@ class Student(Model):
         self._last_name = last_name
 
     @property
-    def grade_record(self) -> List[GradeRecords]:
-        """Gets the grade_record of this Student.
+    def grade_records(self) -> List[GradeRecords]:
+        """Gets the grade_records of this Student.
 
 
-        :return: The grade_record of this Student.
+        :return: The grade_records of this Student.
         :rtype: List[GradeRecords]
         """
-        return self._grade_record
+        return self._grade_records
 
-    @grade_record.setter
-    def grade_record(self, grade_record: List[GradeRecords]):
-        """Sets the grade_record of this Student.
+    @grade_records.setter
+    def grade_records(self, grade_records: List[GradeRecords]):
+        """Sets the grade_records of this Student.
 
 
-        :param grade_record: The grade_record of this Student.
-        :type grade_record: List[GradeRecords]
+        :param grade_records: The grade_records of this Student.
+        :type grade_records: List[GradeRecords]
         """
 
-        self._grade_record = grade_record
+        self._grade_records = grade_records
